[fix/chart-issue] fix indicator overlap issue

--- a/src/editor/blocks/chart/styles/style.scss
+++ b/src/editor/blocks/chart/styles/style.scss
@@ -3,6 +3,7 @@
         display: flex;
         flex-direction: row;
         width: 100%;
+        height: 100%;
     }
 
     .chart-content {
@@ -15,6 +16,10 @@
         transition: all .4s ease;
         backface-visibility: hidden;
         -webkit-backface-visibility: hidden;
+
+        .chart-container {
+            z-index: 2;
+        }
         
         .chart-inside {
             top: 50%;
